# cppfolio

./: .dockerignore  .gitignore  CMakeLists.txt  README.md  docker-compose.yml
.github/workflows/: production.yml  staging.yml
blog/: CMakeLists.txt  Dockerfile
blog/src/: main.cpp
blog/templates/: index.html  post.html
blog/templates/partials/: footer.html  nav.html
data/: portfolio.json
include/: fixed_string.hpp
portfolio/: CMakeLists.txt  Dockerfile
portfolio/src/: main.cpp
portfolio/templates/: base.html  changelog.html  explore.html  hire.html  index.html  not_found.html  now.html  resume.html  testimonials.html  uses.html
portfolio/templates/partials/: footer.html  nav.html
scripts/: codegen.py
shared/codegen/: codegen.py
shared/data/blog/: no-os-no-malloc.json
shared/data/portfolio/: data.json
shared/templates/partials/: head.html
shared/tests/: test_fixed_string.cpp
src/: main.cpp
templates/: about.html  contact.html  index.html  projects.html
templates/partials/: footer.html  head.html
